# faster_fishers

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
benches/: benchmark.rs
examples/: simple.rs
src/: lib.rs
src/fisher/: mod.rs
src/fishers/: mod.rs
tests/: test_exact.py  test_ext.py
