[package]
name = "faster-fishers"
version = "0.1.3"
authors = ["Maxime Jacques <maxyme@outlook.com>"]
edition = "2021"
license = "MIT"
description = "Rust version of Scipy's Fisher exact test."
homepage = "https://github.com/Maxyme/faster_fishers/"
repository = "https://github.com/Maxyme/faster_fishers/"
readme = "README.md"
documentation = "https://github.com/Maxyme/faster_fishers/"

[lib]
name = "faster_fishers"
crate-type = ["cdylib", "lib"]

[dependencies]
numpy = "0.21.0"
statrs = "0.17.1"
rayon = "1.10.0"

[dev-dependencies]
float-cmp = "0.9.0"
criterion = "0.5.1"

[dependencies.pyo3]
version = "0.21.2"
features = ["extension-module"]

[[example]]
name = "simple"
path = "examples/simple.rs"
