[tool.poetry]
name = "faster-fisher"
version = "0.1.0"
description = "Fast implementation of Fisher's exact test in Rust for Python."
authors = ["Maxime Jacques <maxyme@outlook.com>"]

[tool.poetry.dependencies]
numpy = ">=1.21"
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
pytest = ">=6.2"
pytest-benchmark = ">=3.4"
scipy = ">=1.7"
maturin = ">=0.12"

[build-system]
requires = ["maturin>=0.12"]
build-backend = "maturin"
