[tool.poetry]
name = "faster-fisher"
version = "0.1.3"
description = "Fast implementation of Fisher's exact test in Rust for Python."
authors = ["Maxime Jacques"]
homepage = "https://github.com/Maxyme/faster_fishers"

[tool.poetry.dependencies]
numpy = ">=1.21"
python = ">=3.8,<3.13"
bitstring = "^4.0.1"
z3 = "^0.2.0"
z3-solver = "^4.11.2.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.0"
pytest-benchmark = ">=3.4"
scipy = ">=1.7"
maturin = ">=0.12"

[build-system]
requires = ["maturin>=0.12"]
build-backend = "maturin"
