[project]
name = "faster-fishers"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.4",
]

[dependency-groups]
dev = [
    "scipy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "faster_fishers"
